// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sequence with the @cubejs-backend/athena-driver for the Customers.RollingExternal 1`] = `
Array [
  Array [
    "createSchemaIfNotExists",
    "loadPreAggregationIntoTable",
    "tableColumnTypes",
  ],
  Array [
    "createSchemaIfNotExists",
    "uploadTableWithIndexes",
  ],
]
`;

exports[`Sequence with the @cubejs-backend/athena-driver for the Customers.RollingInternal 1`] = `
Array [
  Array [
    "loadPreAggregationIntoTable",
  ],
  Array [],
]
`;

exports[`Sequence with the @cubejs-backend/athena-driver for the ECommerce.SimpleAnalysisInternal 1`] = `
Array [
  Array [
    "loadPreAggregationIntoTable",
  ],
  Array [],
]
`;

exports[`Sequence with the @cubejs-backend/athena-driver for the ECommerce.TimeAnalysisInternal 1`] = `
Array [
  Array [
    "createSchemaIfNotExists",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "tableColumnTypes",
    "tableColumnTypes",
    "createSchemaIfNotExists",
    "createSchemaIfNotExists",
    "createSchemaIfNotExists",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "tableColumnTypes",
    "tableColumnTypes",
    "tableColumnTypes",
    "createSchemaIfNotExists",
    "createSchemaIfNotExists",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "tableColumnTypes",
    "tableColumnTypes",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
  ],
  Array [
    "uploadTableWithIndexes",
    "uploadTableWithIndexes",
    "uploadTableWithIndexes",
    "uploadTableWithIndexes",
    "uploadTableWithIndexes",
    "uploadTableWithIndexes",
    "uploadTableWithIndexes",
    "uploadTableWithIndexes",
  ],
]
`;
